# mongo-rust-driver

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.semaphore/: docker-compose.yml  semaphore.yml
mongo_c_driver_wrapper/: Cargo.toml  build.rs
mongo_c_driver_wrapper/src/: lib.rs
mongoc-sys/: Cargo.toml  build.rs
mongoc-sys/src/: lib.rs
src/: bson_new.rs  bsonc.rs  bulk_operation.rs  change_stream.rs  client.rs  collection.rs  cursor.rs  database.rs  error.rs  flags.rs  lib.rs  read_prefs.rs  uri.rs  write_concern.rs
tests/: bson_encode_decode.rs  bulk_operation.rs  change_stream.rs  client.rs  collection.rs  cursor.rs  database.rs  flags.rs  read_prefs.rs  tests.rs  uri.rs  write_concern.rs
tests/helpers/: mod.rs
