[package]
name          = "mongo_driver"
version       = "0.13.1"
authors       = ["Thijs Cadier <thijs@appsignal.com>"]
description   = "Mongo Rust driver built on top of the Mongo C driver"
readme        = "README.md"
documentation = "https://docs.rs/mongo_driver/"
repository    = "https://github.com/thijsc/mongo-rust-driver"
keywords      = ["mongodb", "database"]
categories    = ["database", "api-bindings"]
license       = "MIT/Apache-2.0"
edition       = "2018"

[badges]
travis-ci = { repository = "thijsc/mongo-rust-driver" }
is-it-maintained-issue-resolution = { repository = "thijsc/mongo-rust-driver" }
is-it-maintained-open-issues = { repository = "thijsc/mongo-rust-driver" }

[dependencies]
libc = "^0.2"
log  = "^0.4"
bson = "^1.2"
serde = "1.0"
serde_derive = "1.0"

[dependencies.mongoc-sys]
path    = "mongoc-sys"
version = "1.17.4-1"

[dev-dependencies]
chrono = "^0.4"
