[package]
name          = "mongo_driver"
version       = "0.16.0"
authors       = ["Thijs Cadier <thijs@appsignal.com>"]
description   = "Mongo Rust driver built on top of the Mongo C driver"
readme        = "README.md"
documentation = "https://docs.rs/mongo_driver/"
repository    = "https://github.com/thijsc/mongo-rust-driver"
keywords      = ["mongodb", "database"]
categories    = ["database", "api-bindings"]
license       = "MIT/Apache-2.0"
edition       = "2018"

[dependencies]
libc = "^0.2"
log  = "^0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.bson]
version = "^2.0"
features = ["chrono-0_4"]

[dependencies.mongoc-sys]
path    = "mongoc-sys"
version = "=1.30.3"

[dev-dependencies]
chrono = "^0.4"
