[package]
name        = "mongoc-sys"
version     = "1.8.2-0"
description = "Sys package with installer and bindings for mongoc"
authors     = ["Thijs Cadier <thijs@appsignal.com>"]
build       = "build.rs"
repository  = "https://github.com/thijsc/mongo-rust-driver"
links       = "mongoc"
license     = "MIT/Apache-2.0"
categories  = ["external-ffi-bindings"]
exclude     = ["mongo-c-driver-*"]

[dependencies]
libc        = "0.2"
openssl-sys = "0.9"

[build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"
